<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/listTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="99"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/listTitleDate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="33"
            android:gravity="center"
            android:text="@string/list_title_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/listTitleConsumption"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="33"
            android:gravity="center"
            android:text="@string/list_title_consumption"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:orientation="vertical">

            <TextView
                android:id="@+id/listTitleLitres"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/list_title_litres"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

            <TextView
                android:id="@+id/listTitleTripmeter"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/list_title_tripmeter"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
